--- a/OrderOfStars/Views/Home/Index.cshtml
+++ b/OrderOfStars/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-     int n = 11;
-     for (int i = 1; i < n; i++)
-     {
+    //Выводит несколько карточек на главной, пока просто генерирует одинаковые
+    int n = 11;
+    for (int i = 1; i < n; i++)
+    {
 
 <div class="starCard">
         <img />
@@ -10,14 +11,4 @@
 </div>
 
             }
-        }
-
-  
-@{ 
-   // OrderOfStars.Models.OrderOfStarsBaseContext myContext = new OrderOfStars.Models.OrderOfStarsBaseContext();
-
-   // myContext.Users.Add(new OrderOfStars.Models.Users { Name = "asd", IsStar = true });
-  //  myContext.SaveChanges();
-
-
-}
+    }
