--- a/OrderOfStars/Views/Authorization/Index.cshtml
+++ b/OrderOfStars/Views/Authorization/Index.cshtml
@@ -1,7 +1,12 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
-
+﻿<form id="authorizationForm" action="" method="post">
+<div class="form-group">
+    <label for="regEmail">Ваш E-Mail:</label>
+    <input name="EMail" required type="email" class="form-control" id="regEmail" placeholder="name@example.com">
+</div>
+<div class="form-group">
+    <label for="inputPassword1">Ваш пароль:</label>
+    <input required type="password" id="inputPassword1" class="form-control" aria-describedby="passwordHelpBlock">
+  
+</div>
+<button type="submit" class="btn btn-outline-dark myBtn">Авторизация</button>
+</form>
