Вывод данных их базы на главную страницу.

--- a/OrderOfStars/Views/Authorization/Index.cshtml
+++ b/OrderOfStars/Views/Authorization/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<form id="authorizationForm" action="" method="post">
+﻿
+
+
+
+<form id="authorizationForm" action="" method="post">
 <div class="form-group">
     <label for="regEmail">Ваш E-Mail:</label>
     <input name="EMail" required type="email" class="form-control" id="regEmail" placeholder="name@example.com">
