--- a/OrderOfStars/Views/Registration/Index.cshtml
+++ b/OrderOfStars/Views/Registration/Index.cshtml
@@ -29,6 +29,10 @@
     });
 </script>
 
+<script>
+
+</script>
+
 <div id="choiceContainer">
     <p class="registrationWelcomeText">Добро пожаловать на сайт.<br>Если Вы звезда, то вам нужно зарегистрироваться и указать своё расписание,чтобы Вас могли выбрать.<br>Если Вы заказчик, то Вам нужно зарегистрироваться, для возможности заказывать звузду.</p>
     <div class="choiceButtons">
@@ -36,7 +40,6 @@
         <button id="customerBtn" class=" btn-outline-dark chBtn">Я заказчик</button>
     </div>
 </div>
-
 
 <form id="starForm" action="/api/Stars" method="post">
 
@@ -68,12 +71,12 @@
     </div>
     <div class="form-group">
         <label for="descriptionTextArea">Описание:</label>
-        <textarea name="Description" class="form-control" id="descriptionTextArea" rows="3"></textarea>
+        <textarea name="Description" required class="form-control" id="descriptionTextArea" rows="3"></textarea>
     </div>
     <button type="submit" class="btn btn-outline-dark myBtn">Зарегистрироваться</button>
 </form>
 
-<form id="customerForm" action="/api/Stars" method="post">
+<form id="customerForm" action="/api/Customer" method="post">
 
     <div class="form-group">
         <label class="form-control-label" for="firstName">Ваше имя:</label>
