--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -48,12 +48,15 @@ body {
     display:block;
     box-sizing:border-box;
     min-width: 700px;
-    max-width: 60%;
+    max-width: 80%;
     min-height: 730px;
     margin: auto;
-    margin-top: 10px;
     margin-bottom:10px;
-    padding: 10px;
+    padding:40px;
+    padding-top:10px;
+    overflow:auto;
+    border:1px solid black;
+    border-top:0px;
 }
 
 #mainContent * {
