Немного поправлен вывод на страничуц(сама вбюшка). Изменён способ передач данных на страниуцу.

--- a/OrderOfStars/Views/StarCard/Index.cshtml
+++ b/OrderOfStars/Views/StarCard/Index.cshtml
@@ -1,5 +1,11 @@
-﻿<div>
-    <div>@ViewBag.FirstName @ViewBag.SecondName</div>
-    <div>@ViewBag.Description</div>
-</div>
+﻿
+@model OrderOfStars.Models.Stars
+
+<div id="fullStarCardName">@Model.FirstName @Model.SecondName</div>
+<div id="fullStarCardDescription">@Model.Description</div>
+
+
+<!--<div>@ViewBag.FirstName @ViewBag.SecondName</div>
+<div>@ViewBag.Description</div>--> 
+
 
