--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -64,7 +64,7 @@ body {
 }
 
 .starCard {
-    border-radius: 8px;
+    border-radius: 6px;
     margin-bottom: 10px;
     width: 100%;
     height: 200px;
@@ -76,12 +76,13 @@ body {
     width: 150px;
     height: 100%;
     border: 1px solid lightgrey;
-    border-radius: 8px;
+    border-radius: 6px;
     content: url("Images/noAva.png");
 }
 
 .starName {
-    font-size:18px;
+    font-size: 18px;
+    font-weight: 600;
     width: calc(100% - 150px);
     padding-left: 10px;
 }
@@ -163,6 +164,21 @@ footer {
 }
 .myBtn:hover{
     cursor:pointer;
+}
+#fullStarCardName {
+    border-radius: 6px;
+    padding: 5px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    border: 1px solid black;
+}
+#fullStarCardDescription {
+    border-radius: 6px;
+    margin-top: 5px;
+    padding: 5px;
+    width: 100%;
+    border: 1px solid black;
 }
 
 
