--- a/OrderOfStars/Views/Home/Index.cshtml
+++ b/OrderOfStars/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 @using OrderOfStars.Controllers;
 @{           
             StarsController starsController = new StarsController();///Тут будет типа 
-            int length = starsController.ReturnLength();///////////////костылик...
+            int length = starsController.ReturnLength("asd");///////////////костылик...
 
            
             for (int i = 0; i < length; i++)
