--- a/OrderOfStars/Views/Shared/_Layout.cshtml
+++ b/OrderOfStars/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <div id="header">
         <div class="logo" onclick="location.href='@Url.Action("Index", "Home")'"></div>
         <div id="userProf"></div>
-        <button class="btn btn-outline-dark" onclick="location.href='@Url.Action("Index", "Registration")'">Регистрация</button>
+        <button class="btn btn-outline-dark" onclick="location.href='@Url.Action("Register", "Account")'">Регистрация</button>
         <button class="btn btn-outline-dark" onclick="location.href='@Url.Action("Index", "Authorization")'">Авторизация</button>
     </div>
     <div id="mainContent">
