--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -40,8 +40,8 @@
     border-left: 1px solid black;
 }
 #headerUserName:hover {
-        background-color: orange;
-        cursor: pointer;
+    background-color: orange;
+    cursor: pointer;
 }
 
 #headerBtnContainer {
@@ -63,7 +63,7 @@
     display:block;
     box-sizing:border-box;
     min-width: 700px;
-    max-width: 80%;
+    max-width: 70%;
     min-height: 730px;
     margin: auto;
     margin-bottom:10px;
@@ -137,6 +137,7 @@ footer {
     height: 50%;
     width: 50%;
     margin-top:180px;
+    display:none;
     
 }
 .chBtn {
@@ -152,17 +153,18 @@ footer {
     cursor: pointer;
 }
 
-#choiceContainer{
-    width:100%;
-    display:block;
-    margin:auto;
-    float:left;
+#choiceContainer {
+    display: none;
+    width: 100%;
+    display: block;
+    margin: auto;
+    float: left;
 }
 
 #starForm {
     visibility: visible;
     width: 100%;
-    display: none;
+    display: block;
     float: left;
 }
 .form-group{
@@ -214,6 +216,21 @@ footer {
     padding: 5px;
     font-size: 25px;
 }
+
+.adminButton {
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 4px;
+    border: 1px solid black;
+    cursor: pointer;
+    font-size: 25px;
+    width: 100%;
+}
+.adminButton:hover {
+background-color:dimgrey;
+color:white;
+}
+
 
 
 
