--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -31,24 +31,58 @@
     cursor:pointer;
 }
 
-#headerUserName {
-   
-    padding:15px;
-    font-size:25px;
+.headerUserName {
+    box-sizing: border-box;
+    padding: 15px;
+    font-size: 25px;
     float: right;
     height: 100%;
     border-left: 1px solid black;
 }
-#headerUserName:hover {
+.headerUserName:hover {
     background-color: orange;
     cursor: pointer;
 }
-
+.dropdownHover {
+    width:300px;
+    position: relative;
+    display: inline-block;
+}
+.dropdownHover-content {
+    
+    display: none;
+    top: 74px;
+    right:0px;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: calc(100% + 1px);
+    border-left: 1px solid black;
+    border-bottom:1px solid black;
+    background-color:orange;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdownHover-content>div{
+    border-top:1px solid grey;
+   padding:3px;
+   font-size:23px;
+}
+.dropdownHover-content>div:hover{
+   background-color:darkorange;
+   
+   font-size:23px;
+}
+.dropdownHover:hover .dropdownHover-content {
+    display: block;
+}
+.headerHoverText{
+width:100%;
+height:100%;
+}
 #headerBtnContainer {
     padding: 15px;
     float: right;
     height: 100%;
-   
 }
 #header > button {
     margin-top: 10px;
@@ -179,6 +213,7 @@ footer {
 #authorizationForm {
     width: 100%;
 }
+
 .myBtn:hover{
     cursor:pointer;
 }
@@ -208,8 +243,10 @@ footer {
 }
 
 .accountErrorText {
+    
+    float:left;
     font-size: 25px;
-    width: 100%;
+    
     color:red;
 }
 .simpleSiteText {
