--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -2,22 +2,15 @@
     background-color: #F5F5F5;
     padding-bottom: 20px;
 }
-
 /* Set padding to keep content from hitting the edges */
-
 /* Set width on the form input elements since they're 100% wide by default */
-
-
 #header {
     background-color: darkorange;
     width: 100%;
     min-width: 800px;
     height: 75px;
-    border-bottom: 1px black solid;
-
-    
+    border-bottom: 1px black solid;   
 }
-
 .logo {
     margin-top:5px;
     margin-left:5px;
@@ -26,11 +19,9 @@
     height: 62px;
     background-image: url("Images/logo.png");
 }
-
 .logo:hover {
     cursor:pointer;
 }
-
 .headerUserName {
     box-sizing: border-box;
     padding: 15px;
@@ -49,7 +40,6 @@
     display: inline-block;
 }
 .dropdownHover-content {
-    
     display: none;
     top: 74px;
     right:0px;
@@ -63,21 +53,20 @@
     z-index: 1;
 }
 .dropdownHover-content>div{
-    border-top:1px solid grey;
+   border-top:1px solid grey;
    padding:3px;
    font-size:23px;
 }
 .dropdownHover-content>div:hover{
-   background-color:darkorange;
-   
+   background-color:darkorange;  
    font-size:23px;
 }
 .dropdownHover:hover .dropdownHover-content {
     display: block;
 }
 .headerHoverText{
-width:100%;
-height:100%;
+    width:100%;
+    height:100%;
 }
 #headerBtnContainer {
     padding: 15px;
@@ -92,7 +81,6 @@ height:100%;
 #header > button:hover {
     cursor: pointer;
 }
-
 #mainContent {
     display:block;
     box-sizing:border-box;
@@ -104,14 +92,11 @@ height:100%;
     padding:40px;
     padding-top:10px;
     overflow:auto;
-
     border-top:0px;
 }
-
 #mainContent * {
      float: left;
 }
-
 .starCard {
     border-radius: 6px;
     margin-bottom: 10px;
@@ -128,33 +113,27 @@ height:100%;
     border-radius: 6px;
     content: url("Images/noAva.png");
 }
-
 .starName {
     font-size: 18px;
     font-weight: 600;
     width: calc(100% - 150px);
     padding-left: 10px;
 }
-
 .starDescription {
     padding: 10px;
     width: calc(100% - 150px);
     word-wrap: break-word;
 }
-
 .starCard:hover {
     cursor: pointer;
     background-color: rgba(255, 140, 0, 0.01);
     border: 2px solid black;
 }
-
-
 footer {
     display:block;
     float:left;
     width: 100%;
 }
-
 .registrationWelcomeText {
     margin-top:100px;
     font-size:25px;
@@ -164,15 +143,12 @@ footer {
     padding:5px;
     border-right:1px solid black;
 }
-
-
 .choiceButtons {
     padding: 5px;
     height: 50%;
     width: 50%;
     margin-top:180px;
     display:none;
-    
 }
 .chBtn {
     margin-right:100%;
@@ -182,11 +158,9 @@ footer {
     width: 300px;
     height: 60px;
 }
-
 .chBtn:hover {
     cursor: pointer;
 }
-
 #choiceContainer {
     display: none;
     width: 100%;
@@ -194,7 +168,6 @@ footer {
     margin: auto;
     float: left;
 }
-
 #starForm {
     visibility: visible;
     width: 100%;
@@ -204,7 +177,6 @@ footer {
 .form-group{
     width:100%;
 }
-
 #customerForm {
     width: 100%;
     display: none;
@@ -213,7 +185,6 @@ footer {
 #authorizationForm {
     width: 100%;
 }
-
 .myBtn:hover{
     cursor:pointer;
 }
@@ -227,6 +198,7 @@ footer {
     border: 1px solid black;
 }
 #fullStarCardDescription {
+    word-wrap: break-word;
     background-color: white;
     border-radius: 6px;
     margin-top: 5px;
@@ -234,26 +206,21 @@ footer {
     width: 100%;
     border: 1px solid black;
 }
-
 .pageUpTitle{
     font-size:25px;
     width:100%;
     padding-bottom:10px;
     border-bottom:1px solid grey;
 }
-
-.accountErrorText {
-    
+.accountErrorText {   
     float:left;
     font-size: 25px;
-    
     color:red;
 }
 .simpleSiteText {
     padding: 5px;
     font-size: 25px;
 }
-
 .adminButton {
     margin-top: 5px;
     padding: 5px;
@@ -264,8 +231,8 @@ footer {
     width: 100%;
 }
 .adminButton:hover {
-background-color:dimgrey;
-color:white;
+    background-color:dimgrey;
+    color:white;
 }
 
 
