До внедрения knockout

--- a/OrderOfStars/Views/Home/Index.cshtml
+++ b/OrderOfStars/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<script>
+﻿<div id="mainContent">
+</div>
+
+<script>
     function myFunction(index) {
         var url = "StarCard/Index/" + index;
         window.location.href = url;
