--- a/OrderOfStars/Views/StarCard/Index.cshtml
+++ b/OrderOfStars/Views/StarCard/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model int
 
+<div id="mainContent">
+</div>
+
 <script>
     $(document).ready(function () {
         //Call EmpDetails jsonResult Method
