Главная страница полностью переписана под Knokout. ＼(￣▽￣)／

--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -106,7 +106,7 @@
     border: 1px solid black;
     padding: 10px;
 }
-.starCard > img {
+.starImg {
     width: 150px;
     height: 100%;
     border: 1px solid lightgrey;
