--- a/OrderOfStars/Views/StarCard/Index.cshtml
+++ b/OrderOfStars/Views/StarCard/Index.cshtml
@@ -1,28 +1,34 @@
 ﻿@model int
-
-<div id="mainContent">
-    <div id='fullStarCardName' data-bind="text:name"></div>
-    <div id='fullStarCardDescription' data-bind="text:description"></div>
-</div>
-
 <script>
     $(document).ready(function () {
         //Call EmpDetails jsonResult Method
         $.getJSON("/api/Stars/@Model",
             function (json) {
-
                 var viewModel = {
                     name: json.FirstName + " " + json.LastName,
                     description: json.Description
                 }
                 ko.applyBindings(viewModel);
-
-                //$("#mainContent").append("<div id='fullStarCardName'>" + json.FirstName + " " + json.LastName + "</div>");
-                //$("#mainContent").append("<div id='fullStarCardDescription'></div>")
-                //$("#fullStarCardDescription").append(json.Description)
             });
+        $('.myPicker').datepicker({
+            // Можно выбрать тольо даты, идущие за сегодняшним днем, включая сегодня
+            minDate: new Date()
+        })
     });
 </script>
+<link href="~/Content/datepicker.css" rel="stylesheet" type="text/css">
+<script src="~/Scripts/datepicker.js"></script>
+
+<div id="mainContent">
+    <div id='fullStarCardName' data-bind="text:name"></div>
+    <div id='fullStarCardDescription' data-bind="text:description"></div>
+
+    <div id="timePickerContainer">
+        <div class="datepicker-here myPicker"></div>
+    </div>
+</div>
+
+
 
 
 
